# test_project

./: .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 66ba49ec0bba_.py
src/: application.py  logging_config.json
src/UoW/: async_alchemy_uow.py  async_base_unit_of_work.py  base_sevice.py
src/UoW/utils/: transaction.py
src/adapters/dto/: base.py
src/core/: containers.py
src/core/config/: __init__.py  database.py  log.py  server.py
src/core/fastapi/: error.py  mapper.py  middleware.py  responses.py
src/dependency/: container.py
src/entity/: base_repository.py  connection.py  db.py
src/entity/models/: __init__.py  adress.py  entity.py
src/logging_custom/: costum_logging.py
src/modules/address/domain/: model.py
src/modules/address/infrastructure/: dto.py  mapper.py  repository.py  uow.py
src/modules/address/usecase/: __init__.py
src/modules/address/usecase/get_address/: api.py  service.py
