[tool.poetry]
name = "testproject"
version = "0.1.0"
description = ""
authors = ["kurbakov.Ilia <kurbakovila@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
pydantic-settings = "^2.2.1"
pydantic = "^2.7.0"
alembic = "^1.13.1"
dependency-injector = "^4.41.0"
psycopg2-binary = "^2.9.9"
structlog = "^24.1.0"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
aiohttp = "^3.9.5"
python-multipart = "^0.0.9"
multipledispatch = "^1.0.0"
pytest = "^8.1.1"
pytest-docker = "^3.1.1"
faker = "^24.9.0"
pytest-asyncio = "^0.23.6"
geocoder = "^1.38.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
